--- a/cv/src/app/app.component.html
+++ b/cv/src/app/app.component.html
@@ -1,59 +1,57 @@
 <div class="content">
-  <div class="d-flex justify-content-end pe-5">
+  <div class="buttons">
     <button mat-raised-button class="me-2" (click)="generatePdf()">PDF</button>
     <button mat-flat-button color="primary" (click)="changeLang()">
       {{ buttonName }}
     </button>
   </div>
+
   <div class="panel"></div>
 
-  <div class="d-flex p-5" *ngIf="(personalInfo | async)?.info as info">
-    <img class="avatar" [src]="info.avatar" />
-    <div class="w-100 d-flex justify-content-between">
-      <h1 class="name">{{ info.person | uppercase }}</h1>
-      <div class="d-flex align-items-end flex-column">
-        <p class="info" *ngFor="let key of infoData">
+  <div class="personalInfo" *ngIf="(personalInfo | async)?.info as info">
+    <img [src]="info.avatar" />
+    <div class="info">
+      <h1>{{ info.person | uppercase }}</h1>
+      <div>
+        <p *ngFor="let key of infoData">
           {{ "sections.info." + key | translate }}:
           <a (click)="onClickInfo(key)">{{ info[key] }}</a>
         </p>
       </div>
     </div>
   </div>
+
   <ng-container *ngIf="personalInfo | async as personalInfo">
     <div
-      class="d-flex section"
+      class="section"
       *ngFor="let key of sectionKeys(personalInfo); index as i; trackByIndex"
     >
-      <h1 class="header">{{ "sections." + key | translate | uppercase }}</h1>
+      <h1>{{ "sections." + key | translate | uppercase }}</h1>
       <ng-container
         *ngTemplateOutlet="
           key === 'skills' ? skills : experienceEducation;
           context: { data: personalInfo[key] }
         "
-       />
+      />
     </div>
   </ng-container>
 </div>
 
 <ng-template #skills let-data="data">
-  <div class="d-flex flex-wrap">
-    <ng-container *ngFor="let skill of data">
-      <div class="title me-5 d-flex flex-column">
-        <span>{{ skill.name }}</span>
-        <div class="d-flex">
-          <app-rockets [level]="skill.level" />
-        </div>
-      </div>
-    </ng-container>
+  <div class="skills">
+    <div class="item" *ngFor="let skill of data">
+      <span>{{ skill.name }}</span>
+      <app-rockets [level]="skill.level" />
+    </div>
   </div>
 </ng-template>
 
 <ng-template #experienceEducation let-data="data">
-  <div class="d-flex flex-column">
+  <div>
     <ng-container *ngFor="let item of data">
-      <h1 class="title">{{ item.title }}</h1>
-      <h2>{{ item.company }}</h2>
-      <ul class="pb-5">
+      <h4>{{ item.title }}</h4>
+      <h5>{{ item.company }}</h5>
+      <ul>
         <li *ngFor="let task of item?.description">{{ task }}</li>
       </ul>
     </ng-container>
