--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -7,13 +7,16 @@
 
 html,
 body {
-  height: max-content;
+  height: 100%;
+  min-height: max-content;
 }
 body {
-  margin: 0;
+  width: 100vw;
 
   * {
     font-family: $SansFamily;
+    margin: 0;
+    padding: 0;
   }
 
   mat-icon {
