--- a/docs/assets/css/variables.scss
+++ b/docs/assets/css/variables.scss
@@ -1,9 +1,10 @@
 $textColor: #594557;
 $panelColor: #f8f8f8;
 
-$fontSizeL: 100px;
+$fontSizeXL: 100px;
+$fontSizeL: 66px;
 $fontSizeM: 30px;
-$fontSizeS: 25px;
+$fontSizeS: 16px;
 
 $RudaFamily: "Ruda", sans-serif;
 $SansFamily: "DM Sans", sans-serif;
