--- a/cv/src/assets/css/variables.scss
+++ b/cv/src/assets/css/variables.scss
@@ -6,5 +6,7 @@ $fontSizeL: 66px;
 $fontSizeM: 30px;
 $fontSizeS: 16px;
 
+$letterSpacing: 1.5px;
+
 $RudaFamily: "Ruda", sans-serif;
 $SansFamily: "DM Sans", sans-serif;
