--- a/cv/src/app/app.component.scss
+++ b/cv/src/app/app.component.scss
@@ -1,7 +1,5 @@
 @import "./../assets/css/variables.scss";
 
-$letterSpacing: 1.5px;
-
 .content {
   width: 100%;
   height: max-content;
@@ -9,39 +7,7 @@ $letterSpacing: 1.5px;
 
   .buttons {
     display: flex;
-    justify-content: end;
-  }
-
-  .personalInfo {
-    padding-bottom: 3rem;
-
-    img {
-      margin: 2rem 0;
-      width: 300px;
-      height: 300px;
-    }
-
-    .info {
-      font-size: $fontSizeS;
-      line-height: $fontSizeS;
-
-      h1 {
-        font-family: $RudaFamily;
-        line-height: $fontSizeL;
-        font-size: $fontSizeL;
-        width: $fontSizeXL;
-        font-weight: bold;
-        color: $textColor;
-      }
-
-      a {
-        color: $textColor;
-        text-decoration: none;
-        letter-spacing: $letterSpacing;
-        font-weight: bold;
-        cursor: url("./../assets/img/cat.png"), pointer;
-      }
-    }
+    justify-content: flex-end;
   }
 
   .section {
@@ -49,30 +15,9 @@ $letterSpacing: 1.5px;
     flex-direction: column;
     font-family: "DM Sans", sans-serif;
 
-    h1:first-child {
+    h1 {
       color: $textColor;
       font-weight: bold;
-    }
-
-    h4,
-    span {
-      font-weight: bold;
-    }
-
-    ul {
-      padding: 0 0 3rem 2rem;
-    }
-
-    .skills {
-      display: flex;
-      flex-wrap: wrap;
-
-      .item {
-        width: 50%;
-        padding-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-      }
     }
   }
 }
@@ -94,40 +39,6 @@ $letterSpacing: 1.5px;
       left: 0;
       top: 0;
     }
-
-    .personalInfo {
-      display: flex;
-
-      .info {
-        padding-left: 4rem;
-        padding-top: 2rem;
-
-        h1 {
-          margin: 0;
-          padding-top: 2rem;
-          font-size: $fontSizeL;
-          line-height: $fontSizeL;
-        }
-
-        div {
-          padding: 1rem 0;
-        }
-      }
-    }
-
-    .section {
-      .skills {
-        display: flex;
-        flex-wrap: wrap;
-
-        .item {
-          width: 33%;
-          padding-bottom: 1rem;
-          display: flex;
-          flex-direction: column;
-        }
-      }
-    }
   }
 }
 
@@ -137,34 +48,6 @@ $letterSpacing: 1.5px;
 
     .panel {
       width: 40vw;
-    }
-
-    .personalInfo {
-      margin: 0 5rem;
-
-      .info {
-        padding-top: 0;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding-left: 4rem;
-
-        h1 {
-          font-size: $fontSizeXL;
-          line-height: $fontSizeXL;
-          width: min-content;
-          padding-left: 3rem;
-        }
-
-        div {
-          display: flex;
-          flex-direction: column;
-          align-items: end;
-          padding-top: 2.5rem;
-          font-size: $fontSizeS;
-          line-height: $fontSizeS;
-        }
-      }
     }
 
     .section {
@@ -178,42 +61,7 @@ $letterSpacing: 1.5px;
         padding-right: 5rem;
         font-size: $fontSizeM;
         line-height: $fontSizeM;
-        width: 30%;
-      }
-
-      div {
-        width: 70%;
-      }
-
-      h4 {
-        font-size: $fontSizeM;
-        line-height: $fontSizeM;
-      }
-
-      h5 {
-        font-size: $fontSizeS;
-        line-height: $fontSizeM;
-        font-weight: bold;
-      }
-
-      ul {
-        padding-bottom: 3rem;
-        li {
-          font-size: $fontSizeS;
-          line-height: $fontSizeM;
-        }
-      }
-
-      .skills .item {
-        padding: 0 5rem 5rem 0;
-        width: max-content;
-
-        span {
-          font-size: $fontSizeM;
-          line-height: $fontSizeM;
-          font-weight: bold;
-          padding-bottom: 1rem;
-        }
+        min-width: 30%;
       }
     }
   }
@@ -222,10 +70,5 @@ $letterSpacing: 1.5px;
 @media only screen and (min-width: 1920px) {
   .content {
     padding: 5rem;
-
-    .personalInfo .info div {
-      font-size: $fontSizeM;
-      line-height: $fontSizeM;
-    }
   }
 }
