--- a/cv/src/app/components/skills/skills.component.scss
+++ b/cv/src/app/components/skills/skills.component.scss
@@ -12,6 +12,7 @@
 
     span {
       font-weight: bold;
+      padding-bottom: 0.5rem;
     }
   }
 }
@@ -30,6 +31,7 @@
     span {
       font-size: $fontSizeM;
       line-height: $fontSizeM;
+      padding-bottom: 1rem;
     }
   }
 }
