Session Storage - Theme + Lang

--- a/cv/src/app/main/main.component.html
+++ b/cv/src/app/main/main.component.html
@@ -6,7 +6,7 @@
   <div class="buttons">
     <app-chips/>
     <app-buttons
-      [buttonsConfig]="buttonConfig"
+      [buttonsConfig]="buttons"
       (clickEvent)="onClick($event)"
     />
   </div>
