--- a/cv/src/app/components/experience-education/experience-education.component.html
+++ b/cv/src/app/components/experience-education/experience-education.component.html
@@ -1,9 +1,17 @@
-<ng-container *ngFor="let item of data; trackByIndex">
+@for (item of data; track $index) {
   <h4>{{ item.title }}</h4>
   <h5>{{ item.company }}</h5>
   <ul>
-    <li *ngFor="let task of item?.description; trackByIndex">
-      {{ task }}
-    </li>
+    @for (task of item?.description; track $index) {
+      <li>{{ task }}</li>
+    } @empty {
+      <ng-container *ngTemplateOutlet="noData" />
+    }
   </ul>
-</ng-container>
+} @empty {
+  <ng-container *ngTemplateOutlet="noData" />
+}
+
+<ng-template #noData>
+  <b>{{ "noData" | translate }}</b>
+</ng-template>
