--- a/cv/src/app/components/skills/skills.component.html
+++ b/cv/src/app/components/skills/skills.component.html
@@ -1,6 +1,18 @@
-<div class="skills" *ngIf="data">
-  <div class="item" *ngFor="let skill of data; index as i; trackByIndex">
-    <span class="name">{{ skill.name }}</span>
-    <app-rockets [level]="skill.level" />
+@if (data) {
+  <div class="skills">
+    @for (skill of data; track $index) {
+      <div class="item">
+        <span class="name">{{ skill.name }}</span>
+        <app-rockets [level]="skill.level" />
+      </div>
+    } @empty {
+      <ng-container *ngTemplateOutlet="noData" />
+    }
   </div>
-</div>
+} @else {
+  <ng-container *ngTemplateOutlet="noData" />
+}
+
+<ng-template #noData>
+  <b>{{ "noData" | translate }}</b>
+</ng-template>
