--- a/cv/src/app/components/user-info/user-info.component.html
+++ b/cv/src/app/components/user-info/user-info.component.html
@@ -1,14 +1,18 @@
-<div class="user-info" *ngIf="info">
-  <img [src]="info.avatar" [@rubberBand]="pulse" />
-  <div class="info">
-    <h1>{{ info.person | uppercase }}</h1>
-    <div [@changeLanguage]="languageState" >
-      <p *ngFor="let key of infoData; index as i; trackByIndex">
-        {{ "sections.info." + key | translate }}:
-        <a (click)="onClickInfo(key)"
-          >{{ info[key] | phonePipe : key : hideNumber }}
-        </a>
-      </p>
+@if (info) {
+  <div class="user-info">
+    <img [src]="info.avatar" [@rubberBand]="pulse" />
+    <div class="info">
+      <h1>{{ info.person | uppercase }}</h1>
+      <div [@changeLanguage]="languageState">
+        @for (key of infoData; track $index) {
+          <p>
+            {{ "sections.info." + key | translate }}:
+            <a (click)="onClickInfo(key)"
+              >{{ info[key] | phonePipe: key : hideNumber }}
+            </a>
+          </p>
+        }
+      </div>
     </div>
   </div>
-</div>
+}
