--- a/cv/src/app/components/personal-data/personal-data.component.html
+++ b/cv/src/app/components/personal-data/personal-data.component.html
@@ -1,5 +1,7 @@
 <div class="content">
-  <h1 class="content-title">{{ "personalData.aboutme" | translate }}</h1>
+  <h1 class="content-title">
+    {{ "personalData.aboutMe" | translate }}
+  </h1>
   @if (info) {
     <p class="content-description">
       {{ info.description }}
