--- a/cv/src/app/components/personal-data/personal-data.component.scss
+++ b/cv/src/app/components/personal-data/personal-data.component.scss
@@ -4,16 +4,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 0.5rem;
+  padding-bottom: $gap-M;
   line-height: 2;
 
   &-title {
-    color: $basic-color;
+    font-size: calc($fontSizeM * 1.5);
+    font-weight: bold;
   }
 
   &-description {
     text-align: center;
-    padding-bottom: 4rem;
     width: 80%;
     font-size: $fontSizeS;
   }
@@ -24,8 +24,8 @@
     align-items: center;
 
     &--link {
+      color: $black-color;
       text-decoration: none;
-      color: $basic-color;
       font-weight: bold;
     }
   }
@@ -34,21 +34,8 @@
 @media only screen and (min-width: $breakpoint-L) {
   .content {
     &-description {
-      text-align: center;
-      padding-bottom: 4rem;
+      padding-bottom: $gap-L;
       width: 100%;
-    }
-
-    &-contact {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      &--link {
-        text-decoration: none;
-        color: $basic-color;
-        font-weight: bold;
-      }
     }
   }
 }
