--- a/docs/assets/css/variables.scss
+++ b/docs/assets/css/variables.scss
@@ -4,9 +4,8 @@ $fontSizeL: var(--font-size-L);
 
 $letterSpacing: 0.5px;
 
-$RudaFamily: "Ruda", sans-serif;
-$SansFamily: "DM Sans", sans-serif;
-$Fantasy: "fantasy", sans-serif;
+$SansFamily: "Archivo ExtraCondensed Black", Arial;
+$Impact: "Impact", Arial;
 
 $basic-color: var(--basic-color);
 $light-gray-color: var(--light-gray);
@@ -14,12 +13,17 @@ $dark-gray-color: var(--dark-gray);
 $dark-blue-color: var(--dark-blue);
 $light-blue-color: var(--light-blue);
 $white-color: var(--white);
+$black-color: var(--black);
 
 $shadow-color: rgba(66, 68, 90, 1);
 
 $breakpoint-S: 768px;
-$breakpoint-M: 1024px;
+$breakpoint-M: 992px;
 $breakpoint-L: 1366px;
+
+$gap-S: var(--gap-S);
+$gap-M: var(--gap-M);
+$gap-L: var(--gap-L);
 
 :root {
   --white: #ffffff;
@@ -28,24 +32,27 @@ $breakpoint-L: 1366px;
   --dark-gray: #424242;
   --dark-blue: #020024;
   --light-blue: #00d4ff;
+  --black: #000000;
 
   --font-size-S: 12px;
   --font-size-M: 14px;
   --font-size-L: 64px;
+
+  --gap-S: .5rem;
+  --gap-M: 1rem;
+  --gap-L: 3rem;
 }
 
 @media screen and (min-width: $breakpoint-M) {
   body {
-    --font-size-S: 12px;
     --font-size-M: 16px;
-    --font-size-L: 80px;
+    --font-size-L: 72px;
   }
 }
 
 @media screen and (min-width: $breakpoint-L) {
   body {
     --font-size-S: 14px;
-    --font-size-M: 16px;
-    --font-size-L: 90px;
+    --font-size-L: 94px;
   }
 }
