--- a/cv/src/app/commons/buttons/buttons.component.scss
+++ b/cv/src/app/commons/buttons/buttons.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../assets/css/variables.scss";
+@import "./../../../assets/css/variables";
 
 .basicColor .mat-mdc-raised-button:not(:disabled) {
   background-color: $basic-color;
