--- a/cv/src/app/components/user/user.component.scss
+++ b/cv/src/app/components/user/user.component.scss
@@ -1,4 +1,5 @@
-@import "./../../../assets/css/variables.scss";
+@import "./../../../assets/css/mixins";
+@import "./../../../assets/css/variables";
 
 .user {
   display: flex;
@@ -39,10 +40,8 @@
       padding-left: calc($gap-L * 3);
     }
   }
-}
 
-@media only screen and (min-width: $breakpoint-S) {
-  .user {
+  @include mq-min-width(small) {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -60,10 +59,7 @@
       }
     }
   }
-}
-
-@media only screen and (min-width: $breakpoint-L) {
-  .user {
+  @include mq-min-width(large) {
     &-image {
       width: 300px;
       height: 300px;
