--- a/cv/src/app/main/main.component.html
+++ b/cv/src/app/main/main.component.html
@@ -1,44 +1,38 @@
-
 @if (personalInfo | async; as personalInfoData) {
-  <div class="main">
-    <div class="main-buttons">
-      <app-chips [@changeLanguage]="languageState" />
-      <app-buttons [buttonsConfig]="buttons" (clickEvent)="onClick($event)" />
-    </div>
-    <app-user [info]="personalInfoData.info" [languageState]="languageState" />
+<div class="main">
+  <div class="main-buttons">
+    <app-chips [@changeLanguage]="languageState" />
+    <app-buttons [buttonsConfig]="buttons" (clickEvent)="onClick($event)" />
+  </div>
+  <app-user [info]="personalInfoData.info" [languageState]="languageState" />
 
-    <div class="content">
-      <div class="content-info">
-        <app-personal-data
-          [info]="personalInfoData.info"
-          [languageState]="languageState"
-        />
-        <h1 class="content-info--title">
-          {{ "sections.skills" | translate | uppercase }}
+  <div class="content">
+    <div class="content-info">
+      <app-personal-data [info]="personalInfoData.info" [languageState]="languageState" />
+      <h1 class="content-info--title">
+        {{ "sections.skills" | translate | uppercase }}
+      </h1>
+      <app-skills [data]="personalInfoData.skills" />
+    </div>
+    <div class="content-section">
+      @for (key of sectionKeys(personalInfoData); track $index) {
+      <div [@changeLanguage]="languageState">
+        <h1 class="content-section--title">
+          {{ "sections." + key | translate | uppercase }}
         </h1>
-        <app-skills [data]="personalInfoData.skills" />
-      </div>
-      <div class="content-section">
-        @for (key of sectionKeys(personalInfoData); track $index) {
-          <div [@changeLanguage]="languageState">
-            <h1 class="content-section--title">
-              {{ "sections." + key | translate | uppercase }}
-            </h1>
-            @switch (key) {
-              @case ("experience") {
-                <app-experience-education
-                  [data]="personalInfoData.experience"
-                />
-              }
-              @case ("education") {
-                <app-experience-education [data]="personalInfoData.education" />
-              }
-            }
-          </div>
-        } @empty {
-          <b>{{ "noData" | translate }}</b>
+        @switch (key) {
+        @case ("experience") {
+        <app-experience-education [data]="personalInfoData.experience" />
+        }
+        @case ("education") {
+        <app-experience-education [data]="personalInfoData.education" />
+        }
         }
       </div>
+      } @empty {
+      <b>{{ "noData" | translate }}</b>
+      }
     </div>
   </div>
+</div>
 }
