--- a/cv/src/app/main/main.component.scss
+++ b/cv/src/app/main/main.component.scss
@@ -1,4 +1,5 @@
-@import "./../../assets/css/variables.scss";
+@import "./../../assets/css/mixins";
+@import "./../../assets/css/variables";
 
 $radius: $gap-M;
 
@@ -15,12 +16,17 @@ $radius: $gap-M;
 
 .main {
   background-color: $white-color;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
   min-height: 90vh;
   min-width: 330px;
   overflow-x: auto;
   width: 100%;
   padding: $gap-M;
+  display: block;
+  position: relative;
+  z-index: 2;
 
   &-buttons > * {
     width: 100%;
@@ -44,17 +50,12 @@ $radius: $gap-M;
       flex-direction: column;
     }
   }
-}
 
-@media only screen and (min-width: $breakpoint-S) {
-  .main {
+  @include mq-min-width(small) {
     width: 85vw;
     margin: $gap-L auto;
     border-radius: $radius;
     padding: $gap-L $gap-L;
-
-    -webkit-box-shadow: 0px 0px 22px -13px $shadow-color;
-    -moz-box-shadow: 0px 0px 22px -13px $shadow-color;
     box-shadow: 0px 0px 22px -13px $shadow-color;
 
     .content {
@@ -76,11 +77,10 @@ $radius: $gap-M;
       }
     }
   }
-}
 
-@media only screen and (min-width: $breakpoint-M) {
-  .main {
-    width: 75vw;
+  @include mq-min-width(medium) {
+    width: 700px;
+    display: block;
     .content {
       &-info {
         margin-right: $gap-L;
@@ -88,10 +88,8 @@ $radius: $gap-M;
       }
     }
   }
-}
 
-@media only screen and (min-width: $breakpoint-L) {
-  .main {
+  @include mq-min-width(medium) {
     width: 65vw;
     .content {
       width: 80%;
