--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -1,13 +1,16 @@
+@import "./assets/css/mixins";
 @import "~bootstrap/dist/css/bootstrap.css";
-@import "./assets/css/variables.scss";
-@import "./assets/css/scroll.scss";
+@import "./assets/css/variables";
+@import "./assets/css/scroll";
 
 html,
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: max-content;
+  height: 100%;
+  position: relative;
+  overflow: scroll;
 }
 
 body {
@@ -17,15 +20,21 @@ body {
     margin: 0;
     padding: 0;
   }
+
+  @include mq-min-width(small) {
+    .staef {
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-image: linear-gradient(
+        162deg,
+        $dark-blue-color 0%,
+        $basic-color 35%,
+        $light-blue-color 100%
+      );
+    }
+  }
 }
 
-@media only screen and (min-width: $breakpoint-S) {
-  body {
-    background: linear-gradient(
-      162deg,
-      $dark-blue-color 0%,
-      $basic-color 35%,
-      $light-blue-color 100%
-    );
-  }
+.mat-mdc-standard-chip .mdc-evolution-chip__graphic {
+  height: 0;
 }
