--- a/cv/src/app/components/personal-data/personal-data.component.scss
+++ b/cv/src/app/components/personal-data/personal-data.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../assets/css/mixins.scss";
+@use "./../../../assets/css/mixins.scss";
 @import "./../../../assets/css/variables.scss";
 
 .content {
