--- a/cv/src/app/commons/chips/chips.component.html
+++ b/cv/src/app/commons/chips/chips.component.html
@@ -3,6 +3,7 @@
   @for (option of options | async; track i; let i = $index) {
   <mat-chip-option [selected]="option.selected" [disabled]="option.selected"
     [style.backgroundColor]="option.selected ? option.color : ''" (click)="toggleSelection(i, option.color)">{{ "chips."
-    + option.name | translate }}</mat-chip-option>
+    + option.name | translate }}
+  </mat-chip-option>
   }
 </mat-chip-listbox>
